# django-tpay-openapi

./: .coveragerc  .flake8  .gitignore  .isort.cfg  README.md  debug.sh  manage.py  pytest.ini  requirements.txt  requirements_dev.txt  requirements_tests.txt  response.json  setup.cfg  setup.py  tpay.py
.github/workflows/: django.yml
locale/pl/LC_MESSAGES/: django.mo  django.po
testapp/: asgi.py  settings.py  settings_local.example  settings_testing.py  settings_tpay.py  urls.py  wsgi.py
testapp/tests/: test_misc.py
tpay_module/: admin.py  apps.py  consts.py  forms.py  mixins.py  models.py  tpay_api.py  tpay_utils.py  utils.py  views.py
tpay_module/management/commands/: create_test_transaction.py
tpay_module/migrations/: 0001_initial.py
tpay_module/templatetags/: tpay_tags.py
tpay_module/tests/: factories.py  test_api.py  test_models.py  test_tags.py  test_views.py  utils.py
