[metadata]
name = django-tpay-openapi
version = 0.1
description = 'TPay payment provider for django framework'
long_description = file: README.md
url = https://github.com/PSzczepanski1996
author = Patrick Szczepański
author_email = p.szczepanski1996@gmail.pl
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.1.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content


[options]
include_package_data = true
packages = find: